deploy: 69703835c4b14853aa45d0a6911692d32cb08e1f

--- a/intro/docker/contenedores.html
+++ b/intro/docker/contenedores.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Contenedor - Programación de aplicaciones telemáticas</title>
+        <title>Contenedores - Programación de aplicaciones telemáticas</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagen.html">Imagen</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedor.html" class="active">Contenedor</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/servidor.html">Servidor</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html" class="active">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/cookies.html">Cookies</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -119,7 +119,7 @@
                         <a href="https://github.com/apicai/web-ejercicios-pat-2023" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/intro/docker/contenedor.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/intro/docker/contenedores.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -149,46 +149,47 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="docker"><a class="header" href="#docker">Docker</a></h1>
-<h2 id="contenedor"><a class="header" href="#contenedor">Contenedor</a></h2>
-<p>Los contenedores se arrancan a partir del nombre de una imagen. Los contenedores ejecutan un único proceso y cuando éste termina se detiene el contenedor. Los contenedores parados se pueden volver a arrancar sin perder sus datos entre reinicios. Además, pueden compartir ficheros con el SO anfitrión.</p>
-<p><task-list title="Práctica Docker - Entregable 2 de 4 - Contenedor"></task-list></p>
-<ul>
-<li><input disabled="" type="checkbox"/>
+<h2 id="contenedores"><a class="header" href="#contenedores">Contenedores</a></h2>
+<p>Los contenedores se arrancan a partir del nombre de la imagen. Los contenedores ejecutan un único proceso y cuando éste termina se detiene el contenedor. Los contenedores parados se pueden volver a arrancar sin perder sus datos entre reinicios. Además, pueden compartir ficheros con el SO anfitrión.</p>
+<ol>
+<li>
 <p>Con Docker arrancando, ejecuta desde un terminal:</p>
 <pre><code class="language-bash">docker run --name git -v $(pwd):/practicas:rw -it git
-# ... dentro del contenedor ...
+</code></pre>
+<pre><code class="language-bash"># ... dentro del contenedor ...
 cd /practicas
 git clone https://github.com/{usuario}/ci-cd
 exit
 </code></pre>
+<blockquote>
+<p>⚠️ <strong>Importante</strong>: <em>El repo <code>https://github.com/{usuario}/ci-cd</code> es el creado en la práctica de Git. Si no la hiciste, entra Github y <a href="https://github.com/new">crea</a> un nuevo repositorio público llamado &quot;ci-cd&quot; inicializado con un fichero README.md.</em></p>
+</blockquote>
 </li>
-<li><input disabled="" type="checkbox"/>
-<p>Comprueba que también se ha creado <code>practicas/ci-cd/</code> en tu SO anfitrión.</p>
+<li>
+<p>Comprueba que también se ha creado el directorio <code>practicas/ci-cd/</code> en tu SO anfitrión.</p>
+<blockquote>
+<p>⁉️ <strong>Pregunta:</strong> <em>Explica qué hace concretamente el <code>docker run</code> utilizado. ¿Cuál es el proceso que ejecuta el contenedor al arrancarse? ¿Por qué necesitamos el modo <code>rw</code> y no basta con <code>ro</code>?</em></p>
+</blockquote>
 </li>
-<li><input disabled="" type="checkbox"/>
+<li>
 <p>Ejecuta en el terminal anterior: </p>
 <pre><code class="language-bash">docker ps --all
 docker start -ai git
-# ... dentro del contenedor de nuevo ...
+</code></pre>
+<pre><code class="language-bash"># ... dentro del contenedor ...
 exit
 </code></pre>
+<blockquote>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Por qué <code>docker ps</code> dice que el contenedor está parado? ¿Por qué en la última parte tenemos que usar <code>docker start</code> en vez de <code>docker run</code>? ¿Por qué no necesitamos especificar la carpeta compartida con <code>docker start</code>?</em></p>
+</blockquote>
 </li>
-<li><input disabled="" type="checkbox"/>
-<p>Explica qué hace concretamente el <code>docker run</code> utilizado. ¿Cuál es el proceso que ejecuta el contenedor al arrancarse? ¿por qué necesitamos el modo <code>rw</code> y no basta con <code>ro</code>?</p>
-</li>
-<li><input disabled="" type="checkbox"/>
-<p>¿Por qué <code>docker ps</code> dice que el contenedor está parado?</p>
-</li>
-<li><input disabled="" type="checkbox"/>
-<p>¿Por qué en la última parte tenemos que usar <code>docker start</code> en vez de <code>docker run</code>? ¿por qué no necesitamos especificar la carpeta compartida con <code>docker start</code>?</p>
-</li>
-</ul>
+</ol>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../intro/docker/imagen.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../intro/docker/imagenes.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
@@ -202,7 +203,7 @@ exit
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../intro/docker/imagen.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../intro/docker/imagenes.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
