--- a/intro/docker/entorno.html
+++ b/intro/docker/entorno.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagen.html">Imagen</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedor.html">Contenedor</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html" class="active">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/servidor.html">Servidor</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html" class="active">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/cookies.html">Cookies</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -151,12 +151,12 @@
                         <h1 id="docker"><a class="header" href="#docker">Docker</a></h1>
 <h2 id="entorno-desarrollo"><a class="header" href="#entorno-desarrollo">Entorno desarrollo</a></h2>
 <p>En general, los repositorios de software contienen un <code>Dockerfile</code> para su construcción, distribución y despliegue, y un <code>docker-compose.yml</code> que arranca un entorno local para poder probar. Vamos a subir el <code>docker-compose.yml</code> al repo de <code>ci-cd</code>. Para ello nos faltaría configurar nuestras credenciales de Git en el contenedor <code>git</code>.</p>
-<p><task-list title="Práctica Docker - Entregable 4 de 4 - Entorno"></task-list></p>
-<ul>
-<li><input disabled="" type="checkbox"/>
+<ol>
+<li>
 <p>Con Docker arrancando, ejecuta desde un terminal:</p>
 <pre><code class="language-bash">docker start -ai git
-# ... dentro del contenedor ...
+</code></pre>
+<pre><code class="language-bash"># ... dentro del contenedor ...
 ssh-keygen -t ed25519 -C &quot;{email-usuario-github}&quot;
 # ... pulsa [↲] en cada paso ...
 git config --global user.email &quot;{email-usuario-github}&quot;
@@ -165,14 +165,14 @@ cat /root/.ssh/id_ed25519.pub
 # ... copia la salida del comando anterior ...
 </code></pre>
 </li>
-<li><input disabled="" type="checkbox"/>
+<li>
 <p>Entra en Github Settings <code>➜</code> SSH and GPG keys <code>➜</code> New SSH key (<code>https://github.com/settings/ssh/new</code>) y añade la clave SSH:</p>
 <ul>
 <li>Title: practicas</li>
 <li>Key: pega la clave SSH copiada del terminal</li>
 </ul>
 </li>
-<li><input disabled="" type="checkbox"/>
+<li>
 <p>Desde el terminal:</p>
 <pre><code class="language-bash">cd /practicas/ci-cd
 git remote set-url origin git@github.com:{usuario-github}/ci-cd.git
@@ -183,16 +183,16 @@ git push origin feat/local-env
 # ... confía en la conexión con Github escribiendo yes ...
 </code></pre>
 </li>
-<li><input disabled="" type="checkbox"/>
+<li>
 <p>Entra en Github y crea la PR (<code>https://github.com/{usuario}/ci-cd/pull/new/feat/local-env</code>).</p>
 </li>
-<li><input disabled="" type="checkbox"/>
-<p>El entorno de desarrollo local nos permite descargar, modificar, construir, validar, probar y subir el código. ¿Desde dónde y con qué realizarías cada una de esas acciones en el entorno local basado en contenedores que hemos montado?</p>
-</li>
-<li><input disabled="" type="checkbox"/>
-<p>Los pasos de configuración de git podrían haberse incluido en la imagen como instrucciones <code>RUN</code> y <code>ADD</code> del Dockerfile ¿cuáles son las ventajas y desventajas con respecto a hacerlo en el contenedor?</p>
-</li>
-</ul>
+</ol>
+<blockquote>
+<p>⁉️ <strong>Pregunta:</strong> <em>El entorno de desarrollo local nos permite descargar, modificar, construir, validar, probar y subir el código. ¿Desde dónde y con qué realizarías cada una de esas acciones en el entorno local basado en contenedores que hemos montado?</em></p>
+</blockquote>
+<blockquote>
+<p>⁉️ <strong>Pregunta:</strong> <em>Los pasos de configuración de Git podrían haberse incluido en la imagen como instrucciones <code>RUN</code> y <code>ADD</code> del Dockerfile. ¿Cuáles son las ventajas y desventajas con respecto a hacerlo en el contenedor?</em></p>
+</blockquote>
 
                     </main>
 
