--- a/intro/git/cd.html
+++ b/intro/git/cd.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html" class="active">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagen.html">Imagen</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedor.html">Contenedor</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/servidor.html">Servidor</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html" class="active">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/cookies.html">Cookies</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -151,28 +151,24 @@
                         <h1 id="git"><a class="header" href="#git">Git</a></h1>
 <h2 id="cd"><a class="header" href="#cd">CD</a></h2>
 <p>El despliegue continuo permite instalar automáticamente los cambios una vez que estos han superado todas las pruebas.</p>
-<p><task-list title="Práctica Git - Entregable 5 de 6 - CD"></task-list></p>
-<ul>
-<li><input disabled="" type="checkbox"/>
+<ol>
+<li>
 <p>Entra en la configuración de Github-Pages del repo (<code>https://github.com/{usuario}/ci-cd/settings/pages</code>) <code>➜</code> &quot;Source&quot; <code>➜</code> &quot;GitHub Actions&quot; <code>➜</code> &quot;Static HTML&quot; <code>➜</code> &quot;Configure&quot;. Renombra el workflow a <code>cd.yml</code> y modifica las siguientes propiedades de su contenido:</p>
 <ul>
 <li><code>name: CD</code></li>
 <li><code>path: './src'</code></li>
 </ul>
 </li>
-<li><input disabled="" type="checkbox"/>
+<li>
 <p>Guarda los cambios en el repo dando a &quot;Start commit&quot; <code>➜</code> &quot;Commit new file&quot; y comprueba el resultado de la ejecución en las Actions del repo (<code>https://github.com/{usuario}/ci-cd/actions</code>).</p>
 </li>
-<li><input disabled="" type="checkbox"/>
+<li>
 <p>Comprueba que la página web se puede ver desde <code>https://{usuario}.github.io/ci-cd/</code>.</p>
 </li>
-<li><input disabled="" type="checkbox"/>
-<p>¿Por qué se ha disparado la ejecución de la CI y del CD?</p>
-</li>
-<li><input disabled="" type="checkbox"/>
-<p>¿Qué problema ves en que se haya ejecutado correctamente el CD cuando ha fallado la CI?</p>
-</li>
-</ul>
+</ol>
+<blockquote>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Por qué se ha disparado la ejecución de la CI y del CD? ¿Qué problema ves en que se haya ejecutado correctamente el CD cuando ha fallado la CI?</em></p>
+</blockquote>
 
                     </main>
 
