--- a/intro/git/cicd.html
+++ b/intro/git/cicd.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html" class="active">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagen.html">Imagen</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedor.html">Contenedor</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/servidor.html">Servidor</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html" class="active">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/cookies.html">Cookies</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -151,18 +151,17 @@
                         <h1 id="git"><a class="header" href="#git">Git</a></h1>
 <h2 id="cicd"><a class="header" href="#cicd">CI/CD</a></h2>
 <p>Combinando ambos procesos es posible automatizar los despliegues de nuevas versiones con la certeza de que no tienen fallos y que, en caso de haberlos, se impida la integración de los cambios y su despliegue.</p>
-<p><task-list title="Práctica Git - Entregable 6 de 6 - CI/CD"></task-list></p>
-<ul>
-<li><input disabled="" type="checkbox"/>
-Modifica esta sección del workflow de CI con:
+<ol>
+<li>
+<p>Modifica esta sección del workflow de CI con:</p>
 <pre><code class="language-yaml">on:
   pull_request:
     branches: [ &quot;main&quot; ]
   workflow_call:
 </code></pre>
 </li>
-<li><input disabled="" type="checkbox"/>
-Modifica el comienzo de esta sección del workflow de CD con:
+<li>
+<p>Modifica el comienzo de esta sección del workflow de CD con:</p>
 <pre><code class="language-yaml">jobs:
   ci:
     uses: ./.github/workflows/ci.yml
@@ -170,27 +169,30 @@ Modifica el comienzo de esta sección del workflow de CD con:
     needs: [ci]
 </code></pre>
 </li>
-<li><input disabled="" type="checkbox"/>
-Sube los cambios y comprueba el resultado en las Actions del repo (<code>https://github.com/{usuario}/ci-cd/actions</code>).</li>
-<li><input disabled="" type="checkbox"/>
-¿Puedes explicar los cambios anteriores a partir del resultado observado?<hr/></li>
-<li><input disabled="" type="checkbox"/>
-Modifica el fichero <code>./src/index.html</code> para que la CI pase, sube los cambios y comprueba el resultado en las Actions del repo y en la web desplegada.</li>
-<li><input disabled="" type="checkbox"/>
-¿Qué Actions se ejecutan al hacer una PR? ¿qué Actions se ejecutan al mezclar cambios en <code>main</code>?</li>
-<li><input disabled="" type="checkbox"/>
-¿Por qué representa un problema subir directamente los cambios a <code>main</code> en lugar de usar una PR?<hr/></li>
-<li><input disabled="" type="checkbox"/>
-Entra en las reglas de protección de ramas del repo en Github (<code>https://github.com/{usuario}/ci-cd/settings/branches</code>) <code>➜</code> &quot;Add rule&quot; y usa estos valores:
+<li>
+<p>Sube los cambios y comprueba el resultado en las Actions del repo (<code>https://github.com/{usuario}/ci-cd/actions</code>).</p>
+<blockquote>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Puedes explicar los cambios anteriores a partir del resultado observado?</em></p>
+</blockquote>
+</li>
+<li>
+<p>Modifica el fichero <code>./src/index.html</code> para que la CI pase, sube los cambios y comprueba el resultado en las Actions del repo y en la web desplegada.</p>
+<blockquote>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Qué Actions se ejecutan al hacer una PR y cuáles se ejecutan al mezclar cambios en <code>main</code>? ¿Por qué representa un problema subir directamente los cambios a <code>main</code> en lugar de usar una PR?</em></p>
+</blockquote>
+</li>
+<li>
+<p>Entra en las reglas de protección de ramas del repo en Github (<code>https://github.com/{usuario}/ci-cd/settings/branches</code>) <code>➜</code> &quot;Add rule&quot; y usa estos valores:</p>
 <ul>
 <li>Branch name pattern: <code>main</code></li>
 <li>☑️ Require a pull request before merging</li>
 <li>☑️ Require status checks to pass before merging</li>
 </ul>
+<blockquote>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Qué ocurre ahora al intentar hacer cambios directamente en <code>main</code>? ¿y al hacer una PR conteniendo un cambio que no pasa la CI?</em></p>
+</blockquote>
 </li>
-<li><input disabled="" type="checkbox"/>
-¿Qué ocurre ahora al intentar hacer cambios directamente en <code>main</code>? ¿y al hacer una PR conteniendo un cambio que no pasa la CI?</li>
-</ul>
+</ol>
 <blockquote>
 <p>⚠️ <strong>Importante</strong>: <em>para o borra el <a href="https://github.com/codespaces">Codespace</a> al terminar de usarlo.</em></p>
 </blockquote>
