--- a/intro/git/gitflow.html
+++ b/intro/git/gitflow.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html" class="active">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagen.html">Imagen</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedor.html">Contenedor</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/servidor.html">Servidor</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html" class="active">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/cookies.html">Cookies</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -150,37 +150,37 @@
                     <main>
                         <h1 id="git"><a class="header" href="#git">Git</a></h1>
 <h2 id="git-flow"><a class="header" href="#git-flow">Git flow</a></h2>
-<p>Es el convenio elegido por el equipo de desarrollo para organizar el uso de las ramas del repo. Github-Flow es uno de ellos y propone: ❶ la rama <code>main</code> siempre tiene el código válido y desplegable, ❷ los cambios se hacen en ramas nuevas desde <code>main</code>, ❸ las Pull Requests (PR) permiten solicitar la incorporación de los cambios en <code>main</code>, ❹ tras la revisión de la PR, los cambios se mezclan en <code>main</code>.</p>
-<p><task-list title="Práctica Git - Entregable 3 de 6 - Git flow"></task-list></p>
-<ul>
-<li><input disabled="" type="checkbox"/>
-Desde el terminal del Codespace anterior teclea:
+<p>Es el convenio que elige cada equipo de desarrollo para organizar el uso de las ramas del repo. Github-Flow es uno de ellos, y propone: ❶ la rama <code>main</code> siempre tiene el código válido y desplegable, ❷ los cambios se hacen en ramas nuevas desde <code>main</code>, ❸ las Pull Requests (PR) permiten solicitar la incorporación de los cambios en <code>main</code>, ❹ tras la revisión de la PR, los cambios se mezclan en <code>main</code>.</p>
+<ol>
+<li>
+<p>Desde el terminal del Codespace anterior teclea:</p>
 <pre><code class="language-bash">git checkout main
 git checkout -b feat/add-body
 </code></pre>
 </li>
-<li><input disabled="" type="checkbox"/>
-Desde el editor del Codespace actualiza la línea <code>&lt;body&gt;&lt;p&gt;Hola {usuario}&lt;/p&gt;&lt;/body&gt;</code> del fichero <code>src/index.html</code>.</li>
-<li><input disabled="" type="checkbox"/>
-Desde el terminal del Codespace teclea:
+<li>
+<p>Desde el editor del Codespace actualiza la línea <code>&lt;body&gt;&lt;p&gt;Hola {usuario}&lt;/p&gt;&lt;/body&gt;</code> del fichero <code>src/index.html</code>.</p>
+</li>
+<li>
+<p>Desde el terminal del Codespace teclea:</p>
 <pre><code class="language-bash">git add .
 git commit -m &quot;feat: add body&quot;
 git push origin feat/add-body
 </code></pre>
 </li>
-<li><input disabled="" type="checkbox"/>
-Crea una nueva PR de <code>feat/add-body ➜ main</code> en Github (<code>https://github.com/{usuario}/ci-cd/pull/new/feat/add-body</code>), revísala y mezcla.</li>
-<li><input disabled="" type="checkbox"/>
-Desde el terminal del Codespace teclea:
+<li>
+<p>Crea una nueva PR de <code>feat/add-body ➜ main</code> en Github (<code>https://github.com/{usuario}/ci-cd/pull/new/feat/add-body</code>), revísala y mezcla.</p>
+</li>
+<li>
+<p>Desde el terminal del Codespace teclea:</p>
 <pre><code class="language-bash">git checkout main
 git pull origin main
 </code></pre>
 </li>
-<li><input disabled="" type="checkbox"/>
-¿Para qué han valido los comandos <code>git checkout -b</code>, <code>git checkout</code> y <code>git pull</code>?</li>
-<li><input disabled="" type="checkbox"/>
-¿Cuáles son los beneficios de usar este flujo de trabajo en el contexto de un desarrollo colaborativo?</li>
-</ul>
+</ol>
+<blockquote>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Para qué han valido los comandos <code>git checkout -b</code>, <code>git checkout</code> y <code>git pull</code>? ¿Cuáles son los beneficios de usar este flujo de trabajo en el contexto de un desarrollo colaborativo?</em></p>
+</blockquote>
 
                     </main>
 
