--- a/tema2/servidor.html
+++ b/tema2/servidor.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../intro/docker/imagen.html">Imagen</a></li><li class="chapter-item expanded "><a href="../intro/docker/contenedor.html">Contenedor</a></li><li class="chapter-item expanded "><a href="../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../tema2/servidor.html" class="active">Servidor</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../tema2/servidor.html" class="active">Servidor</a></li><li class="chapter-item expanded "><a href="../tema2/cookies.html">Cookies</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -158,7 +158,7 @@
 </code></pre>
 </li>
 <li>
-<p>En un navegador web abre o refresca <a href="http://localhost:8080">http://localhost:8080</a> si estás usando Docker. En caso de usar Codespaces utiliza la URL que se indica al ejecutar el comando anterior.</p>
+<p>En un navegador web abre o refresca <a href="http://localhost:8080">http://localhost:8080</a> si estás usando <strong>Docker</strong>. En caso de usar <strong>Codespaces</strong> utiliza la URL que se indica al ejecutar el comando anterior en el terminal.</p>
 </li>
 <li>
 <p>Vuelve al terminal y comprueba que ha llegado la petición.</p>
@@ -172,11 +172,11 @@ Content-Length: 9
 Respuesta
 </code></pre>
 <blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>Para que netcat se dé cuenta de que la conexión la cerró el navegador, pulsa <kbd>↲</kbd> varias veces. Pero, ¿por qué se cerró la conexión?</em></p>
+<p>⁉️ <strong>Pregunta:</strong> <em>Para que netcat se dé cuenta de que la conexión la cerró el navegador, pulsa <kbd>↲</kbd> varias veces. ¿Por qué se cerró la conexión?</em></p>
 </blockquote>
 </li>
 <li>
-<p>Vamos a simular una descarga. Repite los pasos anteriores pero en el último usa esta otra respuesta:</p>
+<p>Vamos a simular una descarga. Repite los <strong>pasos anteriores</strong> pero en el último usa esta otra respuesta:</p>
 <pre><code class="language-http">HTTP/1.0 200 OK
 Content-Type: text/plain
 Content-Length: 9
@@ -186,32 +186,32 @@ Respuesta
 </code></pre>
 </li>
 <li>
-<p>Vamos a simular una redirección. Vuelve a repetir los pasos 1, 2 y 3, y usa esta otra respuesta:</p>
+<p>Vamos a simular una redirección. Vuelve a repetir los <strong>pasos 1, 2 y 3</strong>, y usa esta otra respuesta:</p>
 <pre><code class="language-http">HTTP/1.0 302 Found
 Content-Length: 0
 Location: https://www.google.com/search?q=browser+cache+301+redirect
 
 </code></pre>
 <blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>¿Qué pasaría si hubiéramos devuelto una redirección 301 permanente? Consejo: ¡no lo pruebes!</em></p>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Qué pasaría si hubiéramos devuelto una redirección <code>301</code> permanente? Consejo: ¡no lo pruebes!</em></p>
 </blockquote>
 </li>
 <li>
-<p>Vamos a simular una autenticación básica. Repite los pasos 1, 2 y 3, y usa esta otra respuesta:</p>
+<p>Vamos a simular una autenticación básica. Repite los <strong>pasos 1, 2 y 3</strong>, y usa esta otra respuesta:</p>
 <pre><code class="language-http">HTTP/1.1 401 UNAUTHORIZED
 Content-Length: 0
 WWW-Authenticate: Basic realm=&quot;Mi servidor netcat&quot;
 
 </code></pre>
-<p>Completa en el navegador los campos para introducir el usuario y password, y dale a enviar. Vuelve al terminal y observa como llega te llega el usuario y password. Para terminar, pega la respuesta del paso 4.</p>
+<p>Completa en el navegador los campos para introducir el usuario y password, y dale a enviar. Vuelve al terminal y observa como te llega el usuario y password. Para terminar, pega la respuesta del <strong>paso 4</strong>.</p>
 <blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>¿Podrías conocer el password de un usuario de tu servidor con este tipo de autenticación? ¿Por qué en este caso no se ha desconectado el navegador y has podido hacer 2 peticiones seguidas?</em></p>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Podrías conocer el password de un usuario de tu servidor con este tipo de autenticación?</em></p>
 </blockquote>
 </li>
 <li>
-<p>Vamos a ver cómo el navegador manda los datos de un formulario web. Repite el paso 1, rellena el formulario siguiente y envíalo. Si usas Codespaces, sustituye <code>http://localhost:8080</code> en el HTML por la URL proporcionada en el entorno.</p>
+<p>Vamos a ver cómo el navegador manda los datos de un formulario web. Repite el <strong>paso 1</strong>, rellena el formulario siguiente y envíalo. Si usas Codespaces, sustituye <code>http://localhost:8080</code> en el HTML por la URL proporcionada en el entorno.</p>
 <details onclick='setTimeout(function(){__CPEmbed(".cp-later")},1)'><summary>Formulario...</summary><br/>
- <div class="cp-later" data-height="470" data-theme-id="light" data-default-tab="html,result" data-editable="true" data-prefill style="opacity:0">
+ <div class="cp-later" data-height="370" data-theme-id="light" data-default-tab="html,result" data-editable="true" data-prefill style="opacity:0">
  <pre data-lang="html">&lt;form id="myForm" action="http://localhost:8080" method="post">
  &lt;fieldset>
      &lt;label for="name">Text Input:&lt;/label>
@@ -233,30 +233,21 @@ WWW-Authenticate: Basic realm=&quot;Mi servidor netcat&quot;
  &lt;/fieldset>
  &lt;fieldset>
      &lt;label for="textarea">Textarea:&lt;/label>
-     &lt;textarea cols="40" rows="8" name="textarea" id="textarea" placeholder="Placeholder">&lt;/textarea>
+     &lt;textarea rows="2" cols="25" name="textarea" id="textarea" placeholder="Placeholder">&lt;/textarea>
  &lt;/fieldset>
  &lt;fieldset>
      &lt;label for="checkbox">Checkbox:&lt;/label>
      &lt;input type="checkbox" name="checkbox">
  &lt;/fieldset>
- &lt;input type="submit" value="Submit">
+ &lt;fieldset>
+     &lt;input type="submit" value="Submit">
+ &lt;/fieldset>
  &lt;/form></pre></div>
  <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
  </details>
+<p>Edita el HTML y quita el <code>method=&quot;post&quot;</code>. Repite el <strong>paso 1</strong> y envía el formulario con ese cambio.</p>
 <blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>Si envias &quot;Ñ&quot; en algún campo ¿en qué codificación llega al servidor?</em></p>
-</blockquote>
-</li>
-<li>
-<p>Por último, vamos a demostrar el uso de las cookies. Repite los pasos 1, 2 y 3, y usa esta otra respuesta:</p>
-<pre><code class="language-http">HTTP/1.0 200 OK
-Set-Cookie: mi-cookie=valor; Path=/
-Content-Length: 0
-
-</code></pre>
-<p>Vuelve a hacer los pasos 1, 2 y 3, y comprueba que el navegador ha enviado la cookie anterior. </p>
-<blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>Si cierras el navegador por completo y repites los pasos, ¿te llegará la cookie anterior? ¿por qué? ¿Y si la cookie fuera</em> <code>Secure</code><em>?</em></p>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Cuál es el método por defecto de un formulario web? ¿En qué situaciones elegirías uno u otro? Si envias &quot;Ñ&quot; en algún campo ¿en qué codificación llega al servidor?</em></p>
 </blockquote>
 </li>
 </ol>
@@ -269,6 +260,9 @@ Content-Length: 0
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
+                            <a rel="next" href="../tema2/cookies.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -280,6 +274,9 @@ Content-Length: 0
                         <i class="fa fa-angle-left"></i>
                     </a>
 
+                    <a rel="next" href="../tema2/cookies.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
