--- a/tema2/cookies.html
+++ b/tema2/cookies.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Conexiones - Programación de aplicaciones telemáticas</title>
+        <title>Cookies - Programación de aplicaciones telemáticas</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../tema2/conexiones.html" class="active">Conexiones</a></li><li class="chapter-item expanded "><a href="../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../tema2/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../tema2/cookies.html">Cookies</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../tema2/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../tema2/cookies.html" class="active">Cookies</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -119,7 +119,7 @@
                         <a href="https://github.com/apicai/web-ejercicios-pat-2023" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/tema2/conexiones.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/tema2/cookies.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -149,79 +149,70 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="http"><a class="header" href="#http">HTTP</a></h1>
-<h2 id="conexiones"><a class="header" href="#conexiones">Conexiones</a></h2>
-<p>En una comunicación HTTP, los clientes siempre crean la conexión. A continuación, vamos a usar <a href="https://en.wikipedia.org/wiki/Telnet">telnet</a> para crear una conexión TCP y simular una comunicación HTTP.</p>
+<h2 id="cookies"><a class="header" href="#cookies">Cookies</a></h2>
+<p>Las cookies son datos creados en el servidor que se envían<sup class="footnote-reference"><a href="#1">1</a></sup> a los navegadores para que los almacenen y reenvíen<sup class="footnote-reference"><a href="#1">1</a></sup> en cada futura petición al mismo servidor (URL). Esos datos pueden contener información de acceso (autenticación), estado (carrito de la compra), configuración (tema L&amp;F), rastreo (publicidad), etc.</p>
 <ol>
 <li>
-<p>Desde el terminal teclea:</p>
-<pre><code class="language-bash">telnet httpbin.org 80
-</code></pre>
-<p>y cuando se conecte pega este contenido (las <strong>2</strong> líneas)<sup class="footnote-reference"><a href="#1">1</a></sup>:</p>
-<pre><code class="language-http">HEAD /html HTTP/1.0
+<p>Las cookies de sesión se borran cuando se cierra el navegador. Repite los <strong>pasos 1, 2 y 3</strong> de la página anterior, y usa esta respuesta:</p>
+<pre><code class="language-http">HTTP/1.0 200 OK
+Set-Cookie: mi-cookie-de-sesion=valor
+Content-Length: 0
 
 </code></pre>
+<p>Vuelve a repetir los <strong>3 primeros pasos</strong>, y comprueba que ahora el navegador envía la cookie en la petición. Comprueba si con cerrar la pestaña es suficiente o has de salir del navegador para que la cookie de sesión deje de enviarse.</p>
 <blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>Para establecer la conexión y teniendo en cuenta los parámetros que le hemos pasado a <code>telnet</code>, ¿qué ha tenido éste que hacer por nosotros?</em></p>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿En qué casos utilizarías una cookie de sesión?</em></p>
 </blockquote>
 </li>
 <li>
-<p>El servidor contesta con un <code>OK</code> y unas cabeceras de respuesta sin cuerpo. Vuelve a hacer el <strong>paso 1</strong> pero esta vez pon <code>HTTP/1.1</code>.</p>
-</li>
-<li>
-<p>La respuesta esta vez es <code>Bad Request</code> porque esta versión obliga a enviar la cabecera <code>Host</code><sup class="footnote-reference"><a href="#2">2</a></sup>. Repite el <strong>paso 1</strong> con esta petición:</p>
-<pre><code class="language-http">HEAD /html HTTP/1.1
-Host: httpbin.org
+<p>Las cookies &quot;permanentes&quot; las deja de enviar el navegador en la fecha indicada por el servidor. Repite los pasos para enviar esta respuesta:</p>
+<pre><code class="language-http">HTTP/1.0 200 OK
+Set-Cookie: mi-cookie-permanente=valor; Max-Age=60
+Content-Length: 0
 
 </code></pre>
-<p>El servidor responde <code>OK</code> pero ahora el comando <code>telnet</code> no termina, continúa conectado. En HTTP 1.0 la conexión la cierra el servidor inmediatamente tras enviar la respuesta (ver <code>Connection: close</code> de esa respuesta), mientras que en HTTP 1.1 se mantiene abierta (ver <code>Connection: keep-alive</code> de esa respuesta) a la espera de nuevas peticiones. </p>
+<p>Comprueba que el navegador envía la cookie en su siguiente petición pero que, pasado 1 minuto, deja de enviarla.</p>
 <blockquote>
-<p>🔍 <strong>Nota:</strong> <em>Si esperamos unos segundos más, el comando <code>telnet</code> termina porque la conexión la cierra el servidor. Por un lado, las conexiones TCP son costosas de establecer por lo que interesa mantenerlas abiertas si seguidamente se va a hacer otra petición. Pero por otro lado, mantener una conexión consume recursos del servidor que no puede malgastar con un cliente que no envía datos.</em></p>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿En qué casos utilizarías una cookie permanente?</em></p>
 </blockquote>
 </li>
 <li>
-<p>Para saber cuál es el timeout por defecto del servidor, espera a que acabe este comando:</p>
-<pre><code class="language-bash">time telnet httpbin.org 80
+<p>Además de la caducidad, una cookie puede tener otras características, muchas de ellas relacionadas con su seguridad<sup class="footnote-reference"><a href="#2">2</a></sup>. Repite los <strong>3 pasos iniciales</strong> y envía esta respuesta:</p>
+<pre><code class="language-http">HTTP/1.1 200 OK
+Set-Cookie: mi-cookie-en-otro-path=valor; Path=/ruta
+Set-Cookie: mi-cookie-segura=valor; Secure
+Set-Cookie: mi-cookie-solo-http=valor; HttpOnly
+Connection: keep-alive
+Content-Type: text/html
+Content-Length: 278
+
+&lt;!DOCTYPE html&gt;&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body&gt;&lt;p&gt;Current cookies: &lt;code&gt;&lt;/code&gt;&lt;/p&gt;&lt;form action=&quot;/ruta&quot;&gt;&lt;input type=&quot;submit&quot; value=&quot;Submit&quot;&gt;&lt;/form&gt;&lt;script&gt;document.getElementsByTagName(&quot;code&quot;)[0].innerHTML=document.cookie;document.cookie=&quot;mi-cookie-de-js=valor&quot;&lt;/script&gt;&lt;/body&gt;&lt;/html&gt;
+
 </code></pre>
+<p>La página muestra las cookies que JS es capaz de leer. Además, vía JS añadimos una cookie. El botón &quot;Submit&quot; enviará una nueva petición al servidor pero a otra ruta. Antes de enviar, vuelve a hacer el <strong>paso 1</strong> de la página anterior.</p>
 <blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>A parte del timeout de lectura y del lado servidor, ¿qué otros tipos de timeout se te ocurren y cuál sería su utilidad?</em></p>
-</blockquote>
-</li>
-<li>
-<p>Hasta ahora hemos usado el puerto TCP 80 que es el de por defecto para conexiones HTTP. El puerto por defecto para conexiones seguras es 443. Repite el <strong>paso 1</strong> usando ese puerto.</p>
-</li>
-<li>
-<p>El servidor nos responde con error porque espera que enviemos los mensajes de negociación de TLS para cifrar la comunicación antes de enviar nada. Repite el <strong>paso 1</strong> usando <code>openssl</code> en lugar de <code>telnet</code><sup class="footnote-reference"><a href="#3">3</a></sup>:</p>
-<pre><code class="language-bash">openssl s_client -state -connect httpbin.org:443
-</code></pre>
-<blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <code>openssl</code> <em>se encarga de cifrar y descifrar los mensajes que enviamos y recibimos con la clave de cifrado intercambiada<sup class="footnote-reference"><a href="#4">4</a></sup>. Esta forma de funcionar, ¿a qué arquitectura se asemeja?</em></p>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Por qué JS solo ve una cookie? ¿Por qué se envía la cookie con <code>Path</code>? ¿Se envían al servidor las cookies creadas con JS?</em></p>
 </blockquote>
 </li>
 </ol>
+<blockquote>
+<p>⚠️ <strong>Importante</strong>: <em>para o borra el <a href="https://github.com/codespaces">Codespace</a> al terminar de usarlo.</em></p>
+</blockquote>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
-<p>La línea en blanco (en realidad <strong>dos</strong> retorno de carro + nueva línea o <code>CRLF</code> o <code>\r\n</code>) indica el fin del mensaje de la petición, y en ese momento el servidor envía el mensaje de respuesta.</p>
+<p>Como cabeceras HTTP de la respuesta o de la petición.</p>
 </div>
 <div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
-<p>Es necesaria para que una misma IP pueda servir diferentes dominios web.</p>
-</div>
-<div class="footnote-definition" id="3"><sup class="footnote-definition-label">3</sup>
-<p>TLS es bastante más complicado que HTTP y no podemos escribir sus mensajes con <code>telnet</code>.</p>
-</div>
-<div class="footnote-definition" id="4"><sup class="footnote-definition-label">4</sup>
-<p>Al comienzo de la salida del comando <code>openssl</code> se pueden ver los mensajes TLS intercambiados entre cliente y servidor negociando el cifrado.</p>
+<p>El robo de las cookies de acceso es un problema típico en el mundo web.</p>
 </div>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../tema2/prerrequisitos.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../tema2/servidor.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../tema2/peticiones.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -229,13 +220,10 @@ Host: httpbin.org
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../tema2/prerrequisitos.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../tema2/servidor.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../tema2/peticiones.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
             </nav>
 
         </div>
